[gd_scene load_steps=2 format=3 uid="uid://d3ky8ukpolq71"]

[ext_resource type="Script" uid="uid://b2ul4f18eay8w" path="res://code stuff/Main/map.gd" id="1_sf8pw"]

[node name="Map" type="Node2D"]
script = ExtResource("1_sf8pw")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(400, 300)

[node name="Kelp_man_cove" type="Button" parent="."]
offset_left = 231.0
offset_top = 189.0
offset_right = 278.0
offset_bottom = 220.0
scale = Vector2(2.8, 3.22857)
text = "Kelp man cove
"

[node name="bar" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
scale = Vector2(6.72, 2)
text = "Bar"

[connection signal="pressed" from="Kelp_man_cove" to="." method="_on_kelp_man_pressed"]
[connection signal="pressed" from="bar" to="." method="_on_bar_pressed"]
